# Cloud-Native-AI

./: README.md
03_docker/00_containerization/: Dockerfile.dev  Dockerfile.prod  README.md
03_docker/01_fastAPI/helloworld/: .devcontainer-internal.json  Dockerfile.dev
03_docker/01_fastAPI/helloworld/.devcontainer/: devcontainer.json
03_docker/01_fastAPI/helloworld/helloworld/: main.py
Microservices/docker/02_containerization/: pyproject.toml
Microservices/docker/02_containerization/app/: main.py
Microservices/docker/02_containerization/tests/: test_main.py
Microservices/docker/fastAPI/helloworld/: pyproject.toml
